# growatt-spf5000es-linux-control

./: .gitignore  README.md  groupings  perftest.c
client/: CMakeLists.txt  GaugeWidget.c  GaugeWidget.h  UIUtils.c  UIUtils.h  Widget.c  Widget.h  main.c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  makefile  palette.xml  tcpclient.c  tcpclient.h
client/widgets/: BatteryWidget.c  BatteryWidget.h  GaugeWidget.c  GaugeWidget.h  StatusSwitchWidget.c  StatusSwitchWidget.h
common/: comms_defs.h  comms_protocol.c  comms_protocol.h  spf5000es_defs.c  spf5000es_defs.h  system_defs.h  utils.c  utils.h
server/: main.c  makefile  server  spf5000es_defs.h  start_inv.sh  system_defs.h  tcpserver.c  tcpserver.h
test/: makefile  test.c  test.h  test_comms_protocol.c  test_comms_protocol.h  test_utils.c  test_utils.h
test/test_comms_protocol/: makefile  test.c
